alert botton fix

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
         <!-- Side menu button -->
-        <button id="menuButton" class="intro">היסטוריית הצאט</button>
+        <button id="menuButton" type="button">היסטוריית הצאט</button>
         <!-- Side menu -->
         <div class="sidemenu" id="sideMenu">
             <span class="close-btn" id="closeButton">&times;</span> <!-- Close button -->
