--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <span class="close-btn" id="closeButton">&times;</span> <!-- Close button -->
             <div class="title">היסטוריית הצ'אט</div>
             <h5 class="subtitle">כאן מוצג כל היסטוריית בחירותך במסגרת מסלול השאלות</h5>
+            <h4 id="topic-display"></h4>    <br>
             <ul id="menuContent" class="subsubtitle">
                 <!-- Array content will be dynamically added here -->
             </ul><br>
@@ -48,6 +49,7 @@
             <section id="status" class="status">
                 <h3 id="username-display-status"></h3> <br>
                 <h3 id="plaintiff-display"></h3>    <br>
+                <h3 id="topic-display"></h3>    <br>
                 <h3 id="user-choice-display"></h3> <br>
                 <h3 id="question-number-display"></h3> <br>
                 <h3 id="sum-of-question"></h3> <br>
