--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section id="intro" class="intro">
-            <h1>ברוך הבא לבוט האינטרנטי של דיני סייבר</h1>
+            <h1>ברוך הבא לבוט של דיני סייבר</h1>
             <img src="./assets/images/law.png" />
             <p>
             ,אתה מוזמן לענות על השאלות הבאות<br />
